# forest-open-data-pipelines

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DATA-LICENSING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/worflows/: daily_sync.yml
.github/workflows/: daily_freshness_watch.yml  weekly_sync.yml
apps/social-post-templates/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
configs/: app.yml
configs/catalog/: open_data.yml  reports.yml
configs/datasets/: cvm_fi_cad_icvm555_hist.yml  cvm_fi_cad_nao_adaptador_rcvm175.yml  cvm_fi_cad_registro_fundo_classe.yml  cvm_fi_doc_extrato.yml  cvm_fi_inf_diario.yml  noticias_agricolas_news.yml
configs/freshness/: watch.yml
docs/: INDEX.md  social_llm_flow.md
scripts/: backfill_cvm_inf_diario.py  bdqueimadas-social-full.sh  run_local.sh
sdk/forest_data/: README.md  pyproject.toml
sdk/forest_data/forest_data/: __init__.py  client.py  models.py
sdk/forest_data/tests/: test_client.py
tests/: test_anp_catalog_compact.py  test_anp_govbr.py  test_anp_producao_social.py  test_bdqueimadas_daily_social.py  test_bdqueimadas_mensal_listing.py  test_bdqueimadas_monthly_chart.py  test_bdqueimadas_overview_builder.py  test_catalog_card_metadata.py  test_cli_help.py  test_cvm_ckan_dataset.py  test_dados_abertos_api_client.py  test_dados_abertos_parse.py  test_focos_incendio_llm_payload.py  test_freshness_classifier.py  test_freshness_watch.py  test_inpe_boletins_integrados.py  test_inpe_coids_directory.py  test_inpe_painel_fogo.py  test_mma_cnuc_unidades_conservacao.py  test_noticias_agricolas_parsers.py  test_profiling.py  test_publish_anp_catalog.py  test_social_llm_runtime.py  test_supranational_runner.py  test_url_only_contract.py
(+386 files in other folders)
