[project]
name = "forest-data"
version = "0.1.0a1"
description = "Public Python client for the Instituto Forest open-data API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Instituto Forest" }]
keywords = ["forest", "open-data", "brazil", "environment", "api-client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21.0"]

[project.urls]
Homepage = "https://institutoforest.org"
Documentation = "https://institutoforest.org/docs/api/v1"
Repository = "https://github.com/julianopadua/forest-open-data-pipelines"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forest_data*"]
